<resources>
    <string name="app_name">Contact Tracing App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_your_password"><u>Forgot your password ?</u></string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up"><u>Sign Up !</u></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="today"><u>Today</u></string>
    <string name="ic_number">IC Number</string>
    <string name="password">Password</string>
    <string name="or_login_with">--------------------or login with--------------------</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_register_with">------------------or register with------------------</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In !</string>
    <string name="tracker_app">Tracker App</string>
    <string name="exposed_to_covid_19">Exposed to Covid-19?</string>
    <string name="user_profile">User Profile</string>
    <string name="locations_visited">Locations Visited</string>
    <string name="risk_status">Risk Status</string>
    <string name="q_question_1">Q : Question 1</string>
    <string name="a_this_is_the_answer_to_the_question">A : This is the answer to the question</string>
    <string name="faq">FAQ</string>
    <string name="user_details">User Details</string>
    <string name="name_user123123">Name : User123123</string>
    <string name="phone_0123456789">Phone : 0123456789</string>
    <string name="nric_03010203010203">NRIC : 03010203010203</string>
    <string name="vaccination_status">Vaccination Status</string>
    <string name="vaccinated">Fully Vaccinated</string>
    <string name="location_checked_in">Location Checked in</string>
    <string name="locations">6 Locations</string>
    <string name="first_dose"><u>First Dose</u></string>
    <string name="second_dose"><u>Second Dose</u></string>
    <string name="booster_dose"><u>Booster Dose</u></string>
    <string name="history">History</string>
    <string name="editProfile">Edit User Details</string>
    <string name="editName">Name</string>
    <string name="editPhone">Phone Number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>