<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_down"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/editProfile_text"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/editProfile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newName"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/input"

        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/editName"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPhone"
        android:layout_width="274dp"
        android:layout_height="44dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/editPhone"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newName" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="274dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="#4f89b4"
        android:elevation="10dp"
        android:fontFamily="@font/inter_extra_bold_italic"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/save"
        android:textSize="18sp"
        app:backgroundTint="#4F89B4"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPhone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_edit"
        android:layout_width="274dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#C54E57"
        android:elevation="10dp"
        android:fontFamily="@font/inter_extra_bold_italic"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        app:backgroundTint="#4F89B4"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>